--- a/dataset/dataset-utl.ipynb
+++ b/dataset/dataset-utl.ipynb
@@ -73,7 +73,7 @@
     "    p0 = max(0, shape[0] - shape_img[0])\n",
     "    p1 = max(0, shape[1] - shape_img[1])\n",
     "    \n",
-    "    print(\"adjust_shape()\")\n",
+    "    print(\"adjust_shape_img()\")\n",
     "    return np.pad(I, ((0, p0), (0, p1)), 'edge')"
    ]
   },
@@ -197,8 +197,8 @@
     "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
     "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
     "    \n",
-    "    swir1 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_1_20m), 2), s)\n",
-    "    swir2 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), s)\n",
+    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), s)\n",
     "    \n",
     "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
     "    \n",
@@ -238,12 +238,12 @@
     "    ir3 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
     "    ir4 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
     "    \n",
-    "    swir1 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_1_20m), 2), s)\n",
-    "    swir2 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "    swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), s)\n",
+    "    swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), s)\n",
     "    \n",
-    "    uv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_AEROSOL_60m), 6), s)\n",
-    "    wv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
-    "    cir = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_CIRRUS_60m), 6), s)\n",
+    "    uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), s)\n",
+    "    wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
+    "    cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), s)\n",
     "    \n",
     "    \n",
     "    I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,10 +271,10 @@
     "def read_sentinel_img(path):\n",
     "    \"\"\"Read cropped Sentinel-2 images: all bands\"\"\"\n",
     "    \n",
-    "    img_name = os.listdir(path)[0][:-7]\n",
-    "    I = 0\n",
+    "    img_name = os.listdir(path)[0][:-7]   \n",
+    "    I = np.ones(0) # initialization needed?\n",
     "    \n",
-    "    if BAND_TYPE ==(1|2|3|4):\n",
+    "    if BAND_TYPE == (1|2|3|4):\n",
     "        red   = io.imread(path + img_name + SENTINEL_RED_10m)\n",
     "        green = io.imread(path + img_name + SENTINEL_GREEN_10m)\n",
     "        blue  = io.imread(path + img_name + SENTINEL_BLUE_10m)\n",
@@ -288,19 +288,20 @@
     "            I = np.stack((red, green, blue, nir), axis=2).astype('float')\n",
     "    \n",
     "    if BAND_TYPE == (3|4):\n",
+    "        print(\"3|4\")\n",
     "        ir1   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_1_20m), 2), shape)\n",
     "        ir2   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_2_20m), 2), shape)\n",
     "        ir3   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_3_20m), 2), shape)\n",
     "        ir4   = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_IR_4_20m), 2), shape)\n",
-    "        swir1 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_1_20m), 2), s)\n",
-    "        swir2 = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_SWIR_2_20m), 2), s)\n",
+    "        swir1 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_1_20m), 2), s)\n",
+    "        swir2 = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_SWIR_2_20m), 2), s)\n",
     "        if(BAND_TYPE == 3):\n",
-    "             I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
+    "            I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2), axis=2).astype('float')\n",
     "        \n",
     "    if BAND_TYPE == 4:\n",
-    "        uv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_AEROSOL_60m), 6), s)\n",
-    "        wv  = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
-    "        cir = adjust_shape(zoom(io.imread(path + im_name + SENTINEL_CIRRUS_60m), 6), s)\n",
+    "        uv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_AEROSOL_60m), 6), s)\n",
+    "        wv  = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_WATER_VAPOR_60m), 6), s)\n",
+    "        cir = adjust_shape_img(zoom(io.imread(path + img_name + SENTINEL_CIRRUS_60m), 6), s)\n",
     "        \n",
     "        I = np.stack((red, green, blue, nir, ir1, ir2, ir3, ir4, swir1, swir2, uv, wv, cir), axis=2).astype('float')\n",
     "    \n",
@@ -330,7 +331,7 @@
     "    # read the images based on the types\n",
     "    # it was tested with the other functions\n",
     "    # TO-DO: test with read_sentinel_img\n",
-    "    # TYPE is defined globally\n",
+    "    # BAND_TYPE is defined globally\n",
     "    I1 = read_sentinel_img(path + IMG_1)\n",
     "    I2 = read_sentinel_img(path + IMG_2)\n",
     "    \n",
@@ -446,7 +447,7 @@
     "            I1, I2, cm = read_sentinel_img_trio(self.path + img_name)\n",
     "            self.imgs_1[img_name] = reshape_torch(I1)\n",
     "            self.imgs_2[img_name] = reshape_torch(I2)\n",
-    "            self.change_maps[im_name] = cm\n",
+    "            self.change_maps[img_name] = cm\n",
     "            \n",
     "            cm_shape    = cm.shape\n",
     "            n_pixels    += np.prod(cm_shape)\n",
